# car_sale_price_prediction

./: .gitignore  manage.py  pyproject.toml
car_sale_price_predication/: asgi.py  settings.py  urls.py  wsgi.py
cars/: apps.py  filters.py  models.py  serializer.py  urls.py  views.py
cars/management/commands/: import_data.py
cars/migrations/: 0001_initial.py  0002_alter_car_uuid.py  0003_alter_car_uuid.py  0004_manufacturer_car_manufacturer_link.py  0005_link_manufacturer.py  0006_alter_car_manufacturer_link.py  0007_remove_car_manufacturer.py  0008_rename_manufacturer_link_car_manufacturer.py  0009_alter_car_manufacturer_alter_car_uuid_and_more.py
schema/: urls.py
tests/: conftest.py
tests/cars/test_views/: test_views.py
